# OpenGL-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Engine  README.md  compile.bat  compile.sh  imgui.ini
glad/include/glad/: gl.h
glad/src/: gl.c
include/: camera.h  shader.h
shaders/: fragment_shader.glsl  vertex_shader.glsl  vertex_shaderLine.glsl
src/: main.c  main.cpp
